--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,10 +13,7 @@
       content="{{ page.description | default: site.description }}"
     />
     {% endif %}
-    <link
-      rel="stylesheet"
-      href="{{ '/assets/css/style.css' | relative_url }}"
-    />
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
     <link
       rel="stylesheet"
       href="{{ '/assets/css/highlight.css' | relative_url }}"
