border style var

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -145,6 +145,8 @@ $tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
 $tw-space-y-reverse: 0;
 $tw-space-x-reverse: 0;
 
+$tw-border-style: solid;
+
 *,
 ::after,
 ::before,
