--- a/_sass/abstracts/_index.scss
+++ b/_sass/abstracts/_index.scss
@@ -1,1 +1,4 @@
-@forward "variables";
+@forward "../abstracts/functions";
+@forward "../abstracts/mixins";
+@forward "../abstracts/variables";
+@forward "../abstracts/placeholders";
