--- a/_sass/layout/_home-header.scss
+++ b/_sass/layout/_home-header.scss
@@ -1,15 +1,17 @@
+@use "../abstracts/";
+
 #home-header {
-  border-bottom-style: $border-style;
+  border-bottom-style: abstracts.$border-style;
   border-bottom-width: 1px;
-  border-color: $color-zinc-200;
-  padding-inline: calc($spacing) * 4;
-  padding-top: calc($spacing) * 16;
-  padding-bottom: calc($spacing) * 8;
-  @media screen and (min-width: $breakpoint-md) {
-    padding-inline: calc($spacing) * 8;
+  border-color: abstracts.$color-zinc-200;
+  padding-inline: calc(abstracts.$spacing) * 4;
+  padding-top: calc(abstracts.$spacing) * 16;
+  padding-bottom: calc(abstracts.$spacing) * 8;
+  @media screen and (min-width: abstracts.$breakpoint-md) {
+    padding-inline: calc(abstracts.$spacing) * 8;
   }
   @media (prefers-color-scheme: dark) {
-    border-color: $color-zinc-800;
+    border-color: abstracts.$color-zinc-800;
   }
 }
 
@@ -18,7 +20,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  gap: calc($spacing) * 2;
+  gap: calc(abstracts.$spacing) * 2;
 }
 
 .header-button-group {
@@ -26,7 +28,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  gap: calc($spacing) * 4;
+  gap: calc(abstracts.$spacing) * 4;
 }
 
 #home-header h1 {
@@ -39,73 +41,5 @@
   @media screen and (min-width: $breakpoint-md) {
     font-size: $text-3xl;
     line-height: $leading, $text-3xl--line-height;
-  }
-}
-
-.header-pill {
-  display: inline-block;
-  border-radius: calc(infinity * 1px);
-  border-style: $border-style;
-  border-width: 1px;
-  border-color: $color-zinc-200;
-  padding-inline: calc($spacing) * 3;
-  padding-block: calc($spacing) * 1;
-  font-size: $text-sm;
-  line-height: $leading, $text-sm--line-height;
-  font-weight: $font-weight-medium;
-  @media (prefers-color-scheme: dark) {
-    border-color: $color-zinc-800;
-  }
-}
-
-.header-button {
-  display: inline-block;
-  border-radius: calc(infinity * 1px);
-  border-style: $border-style;
-  border-width: 1px;
-  border-color: $color-blue-600;
-  background-color: $color-blue-600;
-  padding-inline: calc($spacing) * 3;
-  padding-block: calc($spacing) * 1;
-  font-size: $text-sm;
-  line-height: $leading, $text-sm--line-height;
-  $font-weight: $font-weight-medium;
-  font-weight: $font-weight-medium;
-  color: $color-white;
-  transition-property: color, background-color, border-color, outline-color,
-    text-decoration-color, fill, stroke, opacity, box-shadow, transform,
-    translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter,
-    display, content-visibility, overlay, pointer-events;
-  transition-timing-function: $default-transition-timing-function;
-  transition-duration: $default-transition-duration;
-  &:hover {
-    @media (hover: hover) {
-      border-color: $color-blue-500;
-    }
-  }
-  &:hover {
-    @media (hover: hover) {
-      background-color: $color-blue-500;
-    }
-  }
-  @media (prefers-color-scheme: dark) {
-    border-color: $color-blue-700;
-  }
-  @media (prefers-color-scheme: dark) {
-    background-color: $color-blue-700;
-  }
-  @media (prefers-color-scheme: dark) {
-    &:hover {
-      @media (hover: hover) {
-        border-color: $color-blue-600;
-      }
-    }
-  }
-  @media (prefers-color-scheme: dark) {
-    &:hover {
-      @media (hover: hover) {
-        background-color: $color-blue-600;
-      }
-    }
   }
 }
