--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -1,5 +1,5 @@
 <header id="home-header">
-  <div class="container space-y-4">
+  <div class="container">
     <ul class="header-pill-group">
       {% if site.content.type %}
       <li class="header-pill">{{ site.content.type }}</li>
@@ -11,7 +11,7 @@
     </ul>
     <h1>{{ site.title }}</h1>
     {% if site.content.authors %}
-    <p>
+    <p id="authors">
       {%- for author in site.content.authors -%} {%- if forloop.first -%}
       <a href="{{ author.url }}" target="_blank" class="link"
         >{{ author.name | escape }}</a
@@ -28,7 +28,7 @@
       {%- endif -%} {%- endfor -%}
     </p>
     {% endif %} {% if site.content.affiliation %}
-    <p class="text-sm text-zinc-600 dark:text-zinc-400">
+    <p id="affiliation">
       <a href="{{ site.content.affiliation.url }}" target="_blank" class="link"
         >{{ site.content.affiliation.department }}</a
       >, {{ site.content.affiliation.name }}
