--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -1,24 +1,4 @@
-@use "../abstracts/";
-
-*,
-::after,
-::before,
-::backdrop,
-::file-selector-button {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0 solid;
-}
-
-html,
-:host {
-  line-height: abstracts.$leading;
-  -webkit-text-size-adjust: 100%;
-  tab-size: 4;
-  font-family: abstracts.$font-text;
-  -webkit-tap-highlight-color: transparent;
-}
+@use "../abstracts/" as abstracts;
 
 body {
   background-color: abstracts.$color-background;
@@ -37,7 +17,7 @@ hr {
 
 main {
   padding-inline: calc(abstracts.$spacing) * 4;
-  @media screen and (width >= abstracts.$breakpoint-md) {
+  @media screen and (min-width: abstracts.$breakpoint-md) {
     padding-inline: calc(abstracts.$spacing) * 8;
   }
 }
