--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -1,4 +1,4 @@
-@use "../abstracts/";
+@use "../abstracts/" as abstracts;
 
 $header-button-bg-color: abstracts.$color-blue-600;
 $header-button-border-color: abstracts.$color-blue-600;
