--- a/_sass/layout/_home-page-grid.scss
+++ b/_sass/layout/_home-page-grid.scss
@@ -1,4 +1,14 @@
-@use "../abstracts/";
+@use "../abstracts/" as abstracts;
+
+#home-page-grid {
+  // grid grid-cols-1 md:grid-cols-3 gap-4
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  gap: calc(abstracts.$spacing) * 4;
+  @media (min-width: abstracts.$breakpoint-md) {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
 
 .page-card h3 {
   font-size: abstracts.$text-lg;
