--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,6 +18,8 @@
       rel="stylesheet"
       href="{{ '/assets/css/highlight.css' | relative_url }}"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ "/favicon.ico" |
+    prepend: site.baseurl }}" >
   </head>
   <body>
     {%- include navbar.html -%} {{content}} {%- include footer.html -%}
