--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -28,6 +28,6 @@ strong {
 
 .link {
   font-weight: abstracts.$font-weight-medium;
-  color: abstracts.$color-links;
+  color: var(--color-links);
   text-decoration-line: underline;
 }
