--- a/_sass/components/_page-card.scss
+++ b/_sass/components/_page-card.scss
@@ -12,7 +12,7 @@
   border-radius: abstracts.$radius-lg;
   border-style: abstracts.$border-style;
   border-width: abstracts.$border-width;
-  border-color: abstracts.$color-border;
+  border-color: var(--color-border);
   padding: calc(abstracts.$spacing) * 4;
   transition-property: color, background-color, border-color, outline-color,
     text-decoration-color, fill, stroke, opacity, box-shadow, transform,
@@ -20,23 +20,16 @@
     display, content-visibility, overlay, pointer-events;
   transition-timing-function: abstracts.$default-transition-timing-function;
   transition-duration: abstracts.$default-transition-duration;
+
   &:hover {
-    background-color: abstracts.$color-zinc-50;
-  }
-  @media (prefers-color-scheme: dark) {
-    border-color: abstracts.$color-zinc-800;
-  }
-  @media (prefers-color-scheme: dark) {
-    &:hover {
-      background-color: abstracts.$color-zinc-900;
-    }
+    background-color: var(--color-background-hover);
   }
 
   h3 {
     font-size: abstracts.$text-lg;
     line-height: abstracts.$leading, abstracts.$text-lg--line-height;
     font-weight: abstracts.$font-weight-semibold;
-    color: abstracts.$color-headings;
+    color: var(--color-headings);
   }
 
   p {
@@ -47,7 +40,7 @@
     line-clamp: 2;
     font-size: abstracts.$text-sm;
     line-height: abstracts.$leading, abstracts.$text-sm--line-height;
-    color: abstracts.$color-text;
+    color: var(--color-text);
   }
 
   .arrow-icon {
