--- a/_sass/components/_pill.scss
+++ b/_sass/components/_pill.scss
@@ -5,8 +5,8 @@
   border-radius: calc(infinity * 1px);
   border-style: abstracts.$border-style;
   border-width: abstracts.$border-width;
-  border-color: abstracts.$color-border;
-  background-color: abstracts.$color-background;
+  border-color: var(--color-border);
+  background-color: var(--color-background);
   padding-inline: calc(abstracts.$spacing) * 3;
   padding-block: calc(abstracts.$spacing) * 1;
   font-size: abstracts.$text-sm;
