--- a/_sass/layout/_home-header.scss
+++ b/_sass/layout/_home-header.scss
@@ -3,15 +3,12 @@
 #home-header {
   border-bottom-style: abstracts.$border-style;
   border-bottom-width: 1px;
-  border-color: abstracts.$color-zinc-200;
+  border-color: var(--color-border);
   padding-inline: calc(abstracts.$spacing) * 4;
   padding-top: calc(abstracts.$spacing) * 16;
   padding-bottom: calc(abstracts.$spacing) * 8;
   @media screen and (min-width: abstracts.$breakpoint-md) {
     padding-inline: calc(abstracts.$spacing) * 8;
-  }
-  @media (prefers-color-scheme: dark) {
-    border-color: abstracts.$color-zinc-800;
   }
 
   h1 {
@@ -34,7 +31,7 @@
   #affiliation {
     font-size: abstracts.$text-sm;
     line-height: abstracts.$leading, abstracts.$text-sm--line-height;
-    color: abstracts.$color-zinc-600;
+    color: var(--color-text);
   }
 }
 
