--- a/_sass/components/_pill.scss
+++ b/_sass/components/_pill.scss
@@ -12,4 +12,5 @@
   font-size: abstracts.$text-sm;
   line-height: abstracts.$leading, abstracts.$text-sm--line-height;
   font-weight: abstracts.$font-weight-medium;
+  color: var(--color-headings);
 }
